WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
224091
Non-unified build fixes, early April 2021
https://bugs.webkit.org/show_bug.cgi?id=224091
Summary
Non-unified build fixes, early April 2021
Tyler Wilcock
Reported
2021-04-01 19:03:13 PDT
(Need one of these fixes for
https://bugs.webkit.org/show_bug.cgi?id=223150#c14
, but I'll fix some of the other build errors too)
Attachments
Patch
(7.96 KB, patch)
2021-04-01 19:27 PDT
,
Tyler Wilcock
no flags
Details
Formatted Diff
Diff
Patch
(8.32 KB, patch)
2021-04-01 19:29 PDT
,
Tyler Wilcock
no flags
Details
Formatted Diff
Diff
Patch
(27.95 KB, patch)
2021-04-01 19:58 PDT
,
Tyler Wilcock
no flags
Details
Formatted Diff
Diff
Follow-up patch
(15.92 KB, patch)
2021-04-04 07:33 PDT
,
Tyler Wilcock
no flags
Details
Formatted Diff
Diff
Follow-up patch
(15.91 KB, patch)
2021-04-04 10:21 PDT
,
Tyler Wilcock
no flags
Details
Formatted Diff
Diff
Follow-up patch
(16.46 KB, patch)
2021-04-05 10:30 PDT
,
Tyler Wilcock
no flags
Details
Formatted Diff
Diff
Show Obsolete
(4)
View All
Add attachment
proposed patch, testcase, etc.
Tyler Wilcock
Comment 1
2021-04-01 19:27:41 PDT
Created
attachment 424976
[details]
Patch
Tyler Wilcock
Comment 2
2021-04-01 19:29:03 PDT
Created
attachment 424977
[details]
Patch
Tyler Wilcock
Comment 3
2021-04-01 19:58:43 PDT
Created
attachment 424982
[details]
Patch
EWS
Comment 4
2021-04-02 09:23:44 PDT
Committed
r275422
: <
https://commits.webkit.org/r275422
> All reviewed patches have been landed. Closing bug and clearing flags on
attachment 424982
[details]
.
Radar WebKit Bug Importer
Comment 5
2021-04-02 09:24:13 PDT
<
rdar://problem/76150946
>
Darin Adler
Comment 6
2021-04-02 13:14:42 PDT
Comment on
attachment 424982
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=424982&action=review
> Source/WebCore/ChangeLog:24 > + * dom/EventContext.h: > + * dom/FocusOptions.h:
The ones that involve adding an include to a header are worth "struggling with" a little. Sometimes we can rearrange instead of adding the includes. Not worth it if it’s a .cpp file, but adding a header to a header can definitely contribute to overall project build time slowdown and blot.
> Source/WebCore/ChangeLog:32 > + * workers/service/server/SWScriptStorage.h: > + * Modules/mediastream/RTCDataChannelRemoteSource.h:
Ditto.
Tyler Wilcock
Comment 7
2021-04-04 07:33:31 PDT
Reopening to attach new patch.
Tyler Wilcock
Comment 8
2021-04-04 07:33:34 PDT
Created
attachment 425128
[details]
Follow-up patch
Tyler Wilcock
Comment 9
2021-04-04 07:40:00 PDT
That's a good point, thanks -- I'll keep that in mind for the next one. This follow-up patch should be an improvement. An include of Document.h was added to FocusOptions.h just for a single enum (SelectionRestorationMode). I split this enum out into a separate file so we don't have to do that anymore.
Tyler Wilcock
Comment 10
2021-04-04 10:21:19 PDT
Created
attachment 425130
[details]
Follow-up patch
Darin Adler
Comment 11
2021-04-05 09:29:03 PDT
Comment on
attachment 425130
[details]
Follow-up patch View in context:
https://bugs.webkit.org/attachment.cgi?id=425130&action=review
> Source/WebCore/dom/Element.h:44 > +enum class SelectionRestorationMode : uint8_t;
We normally put enum forward declarations in their own separate paragraph after classes. Sort of “alphabetical order” with enum after class.
Tyler Wilcock
Comment 12
2021-04-05 10:30:42 PDT
Created
attachment 425170
[details]
Follow-up patch
EWS
Comment 13
2021-04-06 09:52:02 PDT
Committed
r275527
: <
https://commits.webkit.org/r275527
> All reviewed patches have been landed. Closing bug and clearing flags on
attachment 425170
[details]
.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug