Source/WebCore/html/HTMLLabelElement.cpp
@@ -32,6 +32,7 @@
 #include "FormAssociatedElement.h"
 #include "HTMLFormControlElement.h"
 #include "HTMLNames.h"
+#include "SelectionRestorationMode.h"
 #include <wtf/IsoMallocInlines.h>
 
 namespace WebCore {
